# word-play

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  \  docker-compose.yml  manage.py  pyproject.toml
docker/: entrypoint.sh
docs/: adding-a-game.md  architecture.md  game-conventions.md  hangman-difficulty.md
frontend/templates/: index.html
games/: consumers.py  models.py  redis_client.py  routing.py  state.py  urls.py  views.py  wordlists.py
games/gametypes/: __init__.py  hangman.py  wordladder.py  wordle.py
games/migrations/: 0001_initial.py  0002_activityevent.py  0003_finishedgame_game_id_finishedgame_snapshot.py
games/tests/: test_api.py  test_consumers.py  test_hangman.py  test_state.py  test_wordladder.py  test_wordle.py  test_wordlists.py
games/words/: allowed_4.txt  allowed_6.txt  allowed_7.txt  answers.txt  answers_4.txt  answers_5.txt  answers_6.txt  answers_7.txt  hangman_easy.txt  hangman_hard.txt  hangman_medium.txt  hangman_nightmare.txt  ladder_3_easy.txt  ladder_3_hard.txt  ladder_3_medium.txt  ladder_3_nightmare.txt  ladder_4_easy.txt  ladder_4_hard.txt  ladder_4_medium.txt  ladder_4_nightmare.txt  ladder_5_easy.txt  ladder_5_hard.txt  ladder_5_medium.txt  ladder_5_nightmare.txt  ladder_6_easy.txt  (+22 more)
scripts/: compute_hangman_difficulty.py  compute_word_ladder_graph.py  generate_wordlists.py
tests_e2e/: conftest.py  test_cooperative.py  test_guessing.py  test_hangman.py  test_new_game.py  test_zombie_guess_retry.py
wordplay/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
(+14 files in other folders)
